--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,7 +7,7 @@ build:
 
 python:
   install:
-    - requirements: docs/requirements.txt
+    - requirements: requirements.txt
 
 sphinx:
-  configuration: docs/src/conf.py
+  configuration: src/conf.py
